# broodminder-export

./: .coverage  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  coverage.xml  pyproject.toml  requirements.txt  sonar-project.properties
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: add-to-project.yml  ci.yml  copilot-setup-steps.yml  dev-lead.yml  feature-ideation.yml  sonarcloud.yml
bm/: __init__.py  __init__.py,cover  client.py  client.py,cover  helpers.py
openapi/: broodminder-openapi.yaml
scripts/: cron_backfill.sh  discover.py  discover.py,cover  extract_all.py  extract_all.py,cover  flatten.py  flatten.py,cover  pip-audit-requirements.txt
tests/: conftest.py  test_ci_compliance.py  test_ci_resilience.py  test_contract.py  test_dependency_audit_compliance.py  test_dev_lead_workflow.py  test_extract_path_safety.py  test_extract_paths.py  test_gitignore_compliance.py  test_gitignore_secrets_compliance.py  test_refactor.py  test_refactor_helpers.py  test_repo_settings_compliance.py  test_script_helpers.py  test_scripts.py  test_scripts_refactor.py
