[project]
name = "broodminder-export"
version = "0.1.0"
description = "Extract all of your data from the BroodMinder External User API into portable files."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["broodminder", "beekeeping", "iot", "data-export", "api"]
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.urls]
Homepage = "https://github.com/petry-projects/broodminder-export"
Issues = "https://github.com/petry-projects/broodminder-export/issues"

[tool.setuptools]
packages = ["bm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v -ra"
markers = [
    "live: test hits the live BroodMinder API; skipped without BROODMINDER_API_KEY",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
